# allergen

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yaml
allergy/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
allergy/migrations/: 0001_initial.py  0002_rename_allergyentries_allergyentry_symptomtype_and_more.py  0003_remove_symptomrecord_entry_and_more.py  0004_medications.py  0005_rename_medications_medication.py  0006_alter_medication_medication_type.py
allergy/templatetags/: custom_filters.py
config/: settings.py  urls.py
core/: forms.py  middlewares.py  urls.py  views.py
core/forms/: login.py  registration.py  user_panel.py
core/views/: generic.py  user_panel.py
scripts/: entrypoint.sh
settings/: urls.py  views.py
settings/forms/: __init__.py  medication.py  new_symptom.py  symptom_type.py
settings/views/: account.py  enums.py  food_allergies.py  medications.py  overview.py  symptoms.py
static/: base.html  navbar.html
static/allergy/: dashboard.html
static/allergy/partials/: add_symptom_error.html  allergy_symptoms.html
static/allergy/partials/calendar/: calendar.html  calendar_grid.html
static/allergy/partials/symptoms/: symptoms_grid.html  (+2 more)
static/allergy/scripts/: calendar.js  symptoms_selector.js
static/login/: login.html  login_error_message.html  login_form_partial.html
static/partials/: confirm_modal.html
static/registration/: registration.html  registration_error_message.html  registration_form_partial.html
static/settings/: account_menu.html  base.html
static/settings/tabs/: medications.html  overview.html  symptoms.html
static/user/: account_menu.html  base.html
static/user/tabs/: user_overview.html  user_symptoms.html
staticfiles/: base.html
staticfiles/allergy/: dashboard.html
staticfiles/allergy/scripts/: calendar.js  symptoms_selector.js
staticfiles/login/: login.html  login_error_message.html  login_errors_partial.html
staticfiles/registration/: registration.html  registration_error_message.html  registration_errors_partial.html
staticfiles/settings/: account_menu.html  base.html
staticfiles/settings/tabs/: overview.html  symptoms.html
staticfiles/user/: base.html
staticfiles/user/tabs/: user_symptoms.html
tests/: conftest.py  test_register.py  test_registration.py
tests/factories/: allergy_entries.py  allergy_entry.py  allergy_symptoms.py  medication.py  symptom_entry.py  symptom_record.py  symptom_type.py  user.py
tests/test_allergy/: test_add_symptom.py  test_dashboard.py  test_delete_symptom.py
tests/test_allergy/calendar/: test_partial_calendar.py
tests/test_allergy/dashboard/: test_dashboard.py  test_redirects.py
tests/test_allergy/symptoms/: test_symptom_add.py  test_symptom_remove.py  test_symptom_save.py  test_symptoms_container.py
tests/test_core/: test_404.py  test_login.py  test_logout.py  test_registration.py
tests/test_settings/: test_overview.py
tests/test_settings/medications/: test_add_medication.py  test_delete_medication.py  test_list_medications.py  test_medication.py
tests/test_settings/symptoms/: test_add_symptom.py  test_delete_symptom.py  test_list_symptoms.py  test_symptom.py
tests/test_user_panel/: test_user_overview.py
(+26 files in other folders)
